# ai_std_3

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  tare.md
ai_agent_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/: __init__.py
app/adapters/: openai_message_adapter.py  openai_tool_adapter.py
app/api/: chat.py  router.py
app/core/: config.py  openai_client.py
app/domain/: __init__.py  conversation.py
app/models/: output_model.py
app/prompts/: builder.py  system.py
app/rag/: chunk.py  embedding.py  retriever.py  vectordb.py
app/repositories/: __init__.py  conversation_repository.py  memory_repository.py
app/schemas/: request.py  response.py
app/services/: chat_service.py  conversation_service.py  rag_service.py  tool_service.py
app/tools/: base.py  registry.py  weather.py
tests/: test_chat.py  test_conversation.py
