[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agent-backend"
version = "0.1.0"
description = "AI Agent Backend Service - A comprehensive backend for AI-powered agents with RAG, tool calling, and workflow management"
authors = [
  { name = "Developer", email = "developer@example.com" }
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "Framework :: FastAPI",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "fastapi>=0.139.0",
  "uvicorn>=0.29.0",
  "python-dotenv>=1.0.0",
  "anyio>=4.14.0",
  "pydantic>=2.8.0",
  "annotated-types>=0.7.0",
  "requests>=2.32.0",
  "langchain>=0.1.0",
  "langchain-openai>=0.1.0",
  "openai>=1.30.0",
  "chromadb>=0.4.0",
  "tenacity>=8.2.0",
  "python-multipart>=0.0.9",
]

[project.scripts]
start = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v"

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
(
  /(\.eggs|\.git|\.hg|\.mypy_cache|\.nox|\.tox|\.venv|_build|buck-out|build|dist)/
)
'''

[tool.flake8]
max-line-length = 88
exclude = [".venv", "__pycache__", "*.pyc"]
extend-ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true
follow_imports = "silent"
exclude = [".venv", "__pycache__"]